[package]
name = "todox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["headers"] }
deadpool-postgres = "0.11.0"
jsonwebtoken = { version = "9", default-features = false }
maud = { version = "0.25.0", features = ["axum"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.33.0", features = ["full"] }
tokio-postgres = "0.7.10"
